--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,9 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
-.env*.local
+# ignore all .env files
+.env*
+!.env.example
 
 # vercel
 .vercel
