--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "npx puppeteer browsers install"
+    "lint": "next lint"
   },
   "dependencies": {
     "@google/genai": "^1.12.0",
@@ -15,6 +14,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-pdf/renderer": "^4.3.0",
+    "@sparticuz/chromium": "^138.0.2",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.3",
     "class-variance-authority": "^0.7.1",
@@ -24,7 +24,7 @@
     "next": "15.4.3",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
-    "puppeteer": "^24.16.0",
+    "puppeteer-core": "^24.16.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
@@ -41,6 +41,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
+    "puppeteer": "^24.16.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
