--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clsx": "^2.1.1",
     "dedent": "^1.6.0",
     "lucide-react": "^0.525.0",
-    "next": "^15.4.8",
+    "next": "15.4.10",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "puppeteer-core": "^24.16.0",
